# GFPGAN-webui

./: .gitignore  Dockerfile  README.md  docker-compose.cpu.yaml  docker-compose.cuda.yaml  docker-compose.rocm.yaml  docker-compose.yaml  pyproject.cpu.toml  pyproject.cuda.toml  pyproject.rocm.toml  pyproject.toml  start-amd.sh
app/: _gfpgan.py  _gpen.py  _utils.py  gfpgan.py  gpen.py  inference.py  main.py
scripts/: build_docker.sh  build_docker_cpu.sh  build_docker_cuda.sh  build_docker_rocm.sh  download_models.sh  run_build_docker_cpu.sh  run_build_docker_cuda.sh  run_build_docker_rocm.sh  run_cpu.sh
